--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,9 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "noImplicitAny": false,
-    "esModuleInterop": true,
-    "moduleResolution": "bundler",
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "ignoreDeprecations": "5.0",
-    "jsx": "react",
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
-    "allowJs": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "typeRoots": ["node_modules/@types"],
-
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-
-    /* Linting */
-    // "strict": true, 严格模式
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-
-    "forceConsistentCasingInFileNames": true
-  },
   "ts-node": {
     "esm": true,
     "transpileOnly": true,
     "experimentalSpecifierResolution": "node"
   },
-  "include": ["src", "yunzai", "plugins", "lib", "renderers", "middleware"]
+  "include": ["src", "yunzai", "plugins", "lib", "renderers", "middleware"],
+  "extends": "yunzai/tsconfig.json"
 }
