--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "yunzai",
-  "version": "4.0.19",
+  "version": "4.0.20",
   "author": "Yoimiya-Kokomi, Le-niao",
   "description": "QQ Group Bot",
   "main": "./app.js",
   "type": "module",
   "scripts": {
-    "app": "node app.js",
-    "login": "node app.js login",
-    "build": "rollup --config rollup.config.js",
-    "start": "pm2 startOrRestart pm2.config.cjs",
+    "app": "npm run css && node app.js",
+    "login": "npm run css && node app.js login",
+    "start": "npm run css && pm2 startOrRestart pm2.config.cjs",
     "stop": "pm2 stop pm2.config.cjs",
     "delete": "pm2 delete pm2.config.cjs",
     "kill": "pm2 kill",
@@ -17,7 +16,9 @@
     "monit": "pm2 monit",
     "pm2": "pm2",
     "image": "node image.js",
-    "css": "tailwindcss -i ./src/input.css -o ./public/output.css",
+    "build": "rollup --config rollup.config.js",
+    "css:watch": "tailwindcss -i ./src/input.css -o ./public/output.css --watch  -m",
+    "css": "tailwindcss -i ./src/input.css -o ./public/output.css -m",
     "version": "node --no-warnings=ExperimentalWarning --loader ts-node/esm  src/version.ts",
     "lint": "commitlint --config .commitlint.config.cjs -e -V",
     "format": "prettier --write .",
