--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yunzai",
-  "version": "4.0.20",
+  "version": "4.0.21",
   "author": "Yoimiya-Kokomi, Le-niao",
   "description": "QQ Group Bot",
   "main": "./app.js",
@@ -39,12 +39,15 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
+    "leveldown": "^6.1.1",
+    "levelup": "^5.1.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "log4js": "^6.9.1",
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
+    "node-localstorage": "^3.0.5",
     "node-schedule": "^2.1.1",
     "oicq": "^2.3.1",
     "pm2": "^5.3.1",
@@ -69,9 +72,11 @@
     "@types/koa-mount": "^4.0.5",
     "@types/koa-router": "^7.4.8",
     "@types/koa-static": "^4.0.4",
+    "@types/leveldown": "^4.0.6",
     "@types/lodash": "^4.14.200",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.8.5",
+    "@types/node-localstorage": "^1.3.3",
     "@types/node-schedule": "^2.1.7",
     "@types/react-dom": "^18.2.22",
     "@types/redis": "^4.0.11",
