--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/koa-router": "^7.4.8",
     "@types/koa-static": "^4.0.4",
     "@types/leveldown": "^4.0.6",
+    "@types/levelup": "^5.1.5",
     "@types/lodash": "^4.14.200",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.8.5",
