--- a/yunzai/tsconfig/tsconfig.json
+++ b/yunzai/tsconfig/tsconfig.json
@@ -24,11 +24,15 @@
     "isolatedModules": true,
 
     /* Linting */
-    // "strict": true, 严格模式
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
     "forceConsistentCasingInFileNames": true
+  },
+  "ts-node": {
+    "esm": true,
+    "transpileOnly": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
