--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yunzai",
-  "version": "4.0.22",
+  "version": "4.1.0-rc.0",
   "author": "Yoimiya-Kokomi, Le-niao",
   "description": "QQ Group Bot",
   "main": "./app.js",
@@ -17,7 +17,6 @@
     "pm2": "pm2",
     "image": "node image.js",
     "build": "rollup --config rollup.config.js",
-    "builder": "tsc -p tsconfig.build.json",
     "css:watch": "tailwindcss -i ./src/input.css -o ./public/output.css --watch  -m",
     "css": "tailwindcss -i ./src/input.css -o ./public/output.css -m",
     "version": "node --no-warnings=ExperimentalWarning --loader ts-node/esm  src/version.ts",
@@ -27,38 +26,6 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "art-template": "^4.13.2",
-    "chalk": "^5.3.0",
-    "chokidar": "^3.6.0",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "https-proxy-agent": "7.0.4",
-    "icqq": "^0.6.10",
-    "image-size": "^1.1.1",
-    "inquirer": "^9.2.16",
-    "koa": "^2.15.3",
-    "koa-mount": "^4.0.0",
-    "koa-router": "^12.0.1",
-    "koa-static": "^5.0.0",
-    "leveldown": "^6.1.1",
-    "levelup": "^5.1.1",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "log4js": "^6.9.1",
-    "md5": "^2.3.0",
-    "moment": "^2.30.1",
-    "node-fetch": "^3.3.2",
-    "node-localstorage": "^3.0.5",
-    "node-schedule": "^2.1.1",
-    "oicq": "^2.3.1",
-    "pm2": "^5.3.1",
-    "puppeteer": "^22.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "redis": "^4.6.13",
-    "sequelize": "^6.37.1",
-    "sqlite3": "5.1.6",
-    "yaml": "^2.4.1",
     "yunzai": "link:yunzai"
   },
   "devDependencies": {
