feat: 先编译再执行

--- a/package.json
+++ b/package.json
@@ -3,23 +3,22 @@
   "version": "4.1.0-rc.0",
   "author": "Yoimiya-Kokomi, Le-niao",
   "description": "QQ Group Bot",
-  "main": "./app.js",
+  "main": "./src/main.js",
   "type": "module",
   "scripts": {
-    "app": "npm run css && node app.js",
-    "login": "npm run css && node app.js login",
-    "start": "npm run css && pm2 startOrRestart pm2.config.cjs",
+    "app": "node src/main.js",
+    "login": "node src/main.js login",
+    "start": "pm2 startOrRestart pm2.config.cjs",
     "stop": "pm2 stop pm2.config.cjs",
     "delete": "pm2 delete pm2.config.cjs",
     "kill": "pm2 kill",
     "logs": "pm2 logs",
     "monit": "pm2 monit",
     "pm2": "pm2",
-    "image": "node image.js",
     "build": "rollup --config rollup.config.js",
     "css:watch": "tailwindcss -i ./src/input.css -o ./public/output.css --watch  -m",
     "css": "tailwindcss -i ./src/input.css -o ./public/output.css -m",
-    "version": "node --no-warnings=ExperimentalWarning --loader ts-node/esm  src/version.ts",
+    "version": "node src/version.js",
     "lint": "commitlint --config .commitlint.config.cjs -e -V",
     "format": "prettier --write .",
     "check-format": "git diff --exit-code",
