--- a/middleware/runtime/package.json
+++ b/middleware/runtime/package.json
@@ -16,7 +16,7 @@
   "exports": {
     ".": {
       "import": "./index.js",
-      "types": "./index.d.ts"
+      "types": "./types/index.d.ts"
     }
   },
   "publishConfig": {
