feat: 移除原神模块

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "include": ["src", "yunzai", "plugins", "middleware"],
+  "include": ["src", "yunzai", "yunzai-mys", "plugins", "middleware"],
   "extends": "yunzai/tsconfig/tsconfig.json"
 }
