--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "react-puppeteer": "^1.0.0-rc.7",
     "yunzai": "link:yunzai",
+    "yunzai-mys": "link:yunzai-mys",
     "yz-mw-runtime": "link:./middleware/runtime",
     "yz-mw-star-rail": "link:./middleware/star-rail",
     "yz-system": "^1.0.0-rc.2"
@@ -49,8 +50,6 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^9.0.11",
-    "prettier": "^3.0.3",
     "rollup": "^4.16.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
