--- a/yunzai/package.json
+++ b/yunzai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yunzai",
-  "version": "1.0.0-rc.6",
+  "version": "1.0.0",
   "author": "Yoimiya-Kokomi, Le-niao, ningmengchongshui",
   "description": "QQ Group Bot",
   "main": "./index.js",
