--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^9.1.1",
     "rollup": "^4.16.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
