--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^9.1.1",
+    "prettier": "^3.3.3",
     "rollup": "^4.16.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
