--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
@@ -178,3 +178,5 @@ log.md
 /config
 
 test.ts
+
+/plugins
