--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yunzai",
-  "version": "4.1.8",
+  "version": "4.1.9",
   "author": "Yoimiya-Kokomi, Le-niao",
   "description": "QQ Group Bot",
   "main": "./src/main.js",
@@ -26,9 +26,9 @@
     "react-puppeteer": "^1.0.0-rc.7",
     "yunzai": "link:yunzai",
     "yunzai-mys": "link:yunzai-mys",
-    "yz-mw-runtime": "link:./middleware/runtime",
-    "yz-mw-star-rail": "link:./middleware/star-rail",
-    "yz-system": "^1.0.0"
+    "yz-mw-runtime": "link:middleware/runtime",
+    "yz-mw-star-rail": "link:middleware/star-rail",
+    "yz-system": "^1.0.1-rc.2"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.0",
