--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yunzai",
-  "version": "4.1.10",
+  "version": "4.1.11",
   "author": "Yoimiya-Kokomi, Le-niao",
   "description": "QQ Group Bot",
   "main": "./src/main.js",
@@ -23,7 +23,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "react-puppeteer": "^1.0.0-rc.7",
+    "react-puppeteer": "^1.0.0",
     "yunzai": "link:yunzai",
     "yunzai-mys": "link:yunzai-mys",
     "yz-mw-runtime": "link:middleware/runtime",
