fix:4.1.22:修复system && react-puppeteer && 简化部分文件写法

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
-  "include": ["src", "yunzai", "yunzai-mys", "plugins", "middleware"],
+  "include": [
+    "src/**/*",
+    "yunzai/**/*",
+    "yunzai-mys/**/*",
+    "plugins/**/*",
+    "middleware/**/*"
+  ],
   "extends": "yunzai/tsconfig/tsconfig.json"
 }
