--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yunzai",
-  "version": "4.1.20",
+  "version": "4.1.21",
   "author": "Yoimiya-Kokomi, Le-niao",
   "description": "QQ Group Bot",
   "main": "./src/main.js",
@@ -55,5 +55,8 @@
     "plugins/**",
     "middleware/**",
     "renderers/**"
-  ]
+  ],
+  "imports": {
+    "#yunzai": "./lib/index.js"
+  }
 }
