--- a/package.json
+++ b/package.json
@@ -5,21 +5,15 @@
   "description": "Bot",
   "type": "module",
   "scripts": {
-    "bundle": "NODE_OPTIONS='--import tsx' rollup --config rollup.config.js",
+    "bundle": "npx lerna run build",
     "format": "prettier --write .",
     "test": "jest",
     "check-format": "git diff --exit-code",
     "prepare": "husky"
   },
-  "dependencies": {
-    "@yunzaijs/mys": "file:packages/mys",
-    "create-yunzaijs": "file:packages/create-yunzaijs",
-    "yunzaijs": "file:packages/yunzaijs"
-  },
   "devDependencies": {
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.7",
@@ -32,15 +26,17 @@
     "husky": "^9.0.11",
     "icqq": "^0.6.10",
     "image-size": "^1.1.1",
+    "lerna": "^8.1.9",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "oicq": "^2.3.1",
     "prettier": "^3.3.3",
     "react-puppeteer": "^1.1.2",
-    "rollup": "^4.18.1",
-    "rollup-plugin-dts": "^6.1.1",
     "ts-jest": "^29.2.5",
-    "tsx": "^4.19.1",
-    "typescript": "^5.5.4"
-  }
+    "tsx": "^4.19.1"
+  },
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
