--- a/packages/yunzaijs/tsconfig.json
+++ b/packages/yunzaijs/tsconfig.json
@@ -1,30 +1,31 @@
 {
   "compilerOptions": {
-    // model
+    /* model */
     "target": "ESNext",
     "module": "ESNext",
-    "allowJs": false,
     "esModuleInterop": true,
+    /* json */
     "resolveJsonModule": true,
-    // jsx
+    /* Bundler mode */
     "jsx": "react",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "moduleDetection": "force",
     "noEmit": true,
-    // version
+    "skipLibCheck": true,
+    /* version */
     "ignoreDeprecations": "5.0",
-    // pages
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-    },
-    // strict
+    /* strict */
+    "allowJs": false,
     "noImplicitAny": false,
     "useDefineForClassFields": true,
     "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
+    /* Linting */
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true
+    "noUncheckedSideEffectImports": true
   }
 }
