--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Bot",
   "type": "module",
   "scripts": {
-    "bundle": "npx lerna run build",
+    "build": "npx lerna run build",
     "format": "prettier --write .",
     "test": "jest",
     "check-format": "git diff --exit-code",
@@ -18,22 +18,20 @@
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.8.5",
+    "@types/node": "^22",
     "@types/node-localstorage": "^1.3.3",
     "@types/node-schedule": "^2.1.7",
     "@types/react": "^18.3.3",
     "@types/redis": "^4.0.11",
     "husky": "^9.0.11",
     "icqq": "^0.6.10",
-    "image-size": "^1.1.1",
     "lerna": "^8.1.9",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "oicq": "^2.3.1",
     "prettier": "^3.3.3",
-    "react-puppeteer": "^1.1.2",
-    "ts-jest": "^29.2.5",
-    "tsx": "^4.19.1"
+    "ts-jest": "^29.2.5"
   },
   "private": true,
   "workspaces": [
