--- a/packages/mys/package.json
+++ b/packages/mys/package.json
@@ -18,14 +18,6 @@
     "sqlite3": "5.1.6",
     "yaml": "^2.5.0"
   },
-  "devDependencies": {
-    "@rollup/plugin-typescript": "^11.1.6",
-    "rollup": "^4.18.1",
-    "rollup-plugin-dts": "^6.1.1",
-    "jsxp": "^1.0.4",
-    "typescript": "^5.5.3",
-    "yunzaijs": "^1.0.0-rc.4"
-  },
   "types": "types",
   "exports": {
     ".": {
@@ -47,5 +39,10 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
     "access": "public"
+  },
+  "bugs": "https://github.com/yunzaijs/core/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yunzaijs/core.git"
   }
 }
