--- a/packages/mys/tsconfig.json
+++ b/packages/mys/tsconfig.json
@@ -27,5 +27,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
-  }
+  },
+  "include": ["src/**/*"]
 }
